Change Log

2009-05-07
	Fix: PRINT-CODE generated tag soup when two subsequent
	tokens were to be printed in boldface.
	Added another tweak for Unix portability to s9.h.
2009-05-06
	Administrative change:
	- #ifdef __unix and #ifdef unix are obviously insufficient
	  to check for a Unix system; added -Dunix to Makefile.
	Thanks, Barak Pearlmutter!
2009-05-05
	- Applied some fixes to the build process.
	- Created browsable version of the library code.
	- Added version tag (timestamp) to distribution file.
	- Added deinstall target to Makefile.
2009-05-04
	Replaced '| by ': in ML-style syntax of DEFINE-MATCH,
	because '| is not portable.
	Removed MAP-CAR from documentation, because it is only
	used internally.
	Simplified definition of LETREC (cosmetics).
	Made the code printer generate links to files included
	via LOAD-FROM-LIBRARY. (contrib/print-code.scm)
2009-05-03
	Added a pattern matcher with optional support for ML syntax
	to the library. (lib/define-match.scm)
	Updated the test suite.
	Moved the online help system to contrib. (contrib/help.scm)
	Moved DRAW-TREE to contrib. (contrib/draw-tree.scm)
	Included the pretty-printer and the online help system in
	the default heap image.
2009-05-01
	Fixed some 64-bit flaws.
	Many thanks to Torsten Leibold for giving his
	AlphaStation 200 4/233 to me!
2009-04-29
	Fix: alpha-conversion of recursive SYNTAX-RULES was broken,
	leading to potentially non-hygienic expansion.
	Added SYNTAX-RULES version of FLUID-LET. (lib/fluid-let-sr.scm)
	Fix: line numbers were off after LOAD.
	Moved interactive programs to CONTRIB, even if they have been
	contributed by myself. (pretty-print.scm, print-code.scm)
2009-04-28
	Finished the new and vastly improved pretty-printer.
	(lib/pretty-print.scm)
2009-04-27
	Fixed some bugs in PROGRAM? (DO with multi-expr test part was
	not allowed; commands were not optional).
	Started rewriting the pretty-printer.
2009-04-26
	Reporting file name in messages when using "-f program" option.