@@ -4,7 +4,7 @@
 # Change at least this line:
 PREFIX= /u
 
-VERSION= 20090507
+VERSION= 20090509
 
 # Extras to be added to the heap image
 EXTRA_STUFF=	-f contrib/help.scm \
